# SqlChecker

./: CMakeLists.txt  README.md
CMakeFind/: FindMySql.cmake  FsdkMacro.cmake
source/: CMakeLists.txt
source/trans_checker/: CMakeLists.txt  FileRW.cpp  FileRW.h  IniRW.cpp  IniRW.h  SqlConnector.cpp  SqlConnector.h  main.cpp
